fix: validate migration ordering and routes